deployment/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soundboard-client
  namespace: soundboard
  labels:
    app: soundboard
    tier: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soundboard
      tier: client
  template:
    metadata:
      labels:
        app: soundboard
        tier: client
    spec:
      containers:
        - name: soundboard-client
          image: nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80

---

apiVersion: v1
kind: Service
metadata:
  name: soundboard-client
  namespace: soundboard
  labels:
    app: tdap
    tier: client
spec:
  selector:
    app: soundboard
    tier: client
  ports:
    - name: http
      port: 80
      targetPort: 80
